objects/APIIntegration_mdt__mdt.object
<CustomObject>
    <fields>
        <fullName>Access_Token_URL_c__c</fullName>
        <label>Access_Token_URL__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callback_URL_c__c</fullName>
        <label>Callback_URL__c</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Id_c__c</fullName>
        <label>Client_Id__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret_c__c</fullName>
        <label>Client_Secret__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>APIIntegration__mdt</label>
    <pluralLabel>APIIntegration__mdt</pluralLabel>
</CustomObject>